detonate ralph completed

--- a/index.html
+++ b/index.html
@@ -17,14 +17,39 @@
     <div class="container">
         <div class="menu">
             <div class="menu-time">
-                <h2 style="color: red;">Your Score</h2>
-                <h2>0</h2>
+                <h2>Time Left</h2>
+                <h2 id="time-left">0</h2>
             </div>
-            <div class="menu-score"></div>
-            <div class="menu-lives"></div>
+            <div class="menu-score">
+                <h2>Your Score</h2>
+                <h2 id="score">0</h2>
+            </div>
+            <div class="menu-lives">
+                <img src="./src/imgs/player.png" 
+                alt="profile photo player" 
+                height="60px">
+                <h2>x3</h2>
+            </div>
         </div>
 
-        <div class="painel">
+        <div class="panel">
+            <div class="panel-row">
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+            </div>
+            
+            <div class="panel-row">
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
 
         </div>
     </div>
